Add add-opens and add-exports.