@@ -431,9 +431,30 @@ public class CheckerMain {
     } else {
       args.addAll(
           Arrays.asList(
-              "--illegal-access=warn",
+              // Add opens allow for reflect access.
               "--add-opens",
-              "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"));
+              "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+              "--add-opens",
+              "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+              // Add exports allow use of unexported packages.
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"));
     }
 
     args.add("-classpath");
